= Backports --- History

== Version 3.6.0 - February 14th, 2014

* Additional features of 2.1.0
  * Bignum#bit_length
  * Fixnum#bit_length

== Version 3.5.0 - February 3rd, 2014

* Additional features of 2.0.0
  * Range#size

== Version 3.4.0 - December 29th, 2013

* Additional features of 2.1.0
  * Array#to_h, Enumerable#to_h

== Version 3.3.0 - April 3rd, 2013

* Moved `Proc#yield` & `Hash#key` from 1.8.7 to 1.9.1

== Version 3.2.0 - April 2nd, 2013

* Moved `Dir.mktmpdir` to the stdlib 'tmpdir' for Ruby 1.8.7

* Removed `returning` as it is no longer part of Rails.

== Version 3.1.0 - March 5th, 2013

* Backports can now be loaded separately!

* Small tweaks and fixes for many methods to pass more RubySpecs

== Version 3.0.0 - February 24th, 2013

* Features of 2.0.0 are now required when requiring 'backports'.

* Additional features of 2.0.0
  * Struct#to_h, NilClass#to_h, Hash#to_h
  * Hash#default_proc = nil
  * OpenStruct lib

* 1.8.7's Enumerator#with_index (it wasn't in the 1.8.7 NEWS file...)

== Version 2.8.0 - February 3rd, 2013

* Added some features of 2.0.0 (must be required explicitly until official release):
  * Array#bsearch
  * Range#bsearch

== Version 2.7.0 - January 14th, 2013

* Added some features of 2.0.0 (must be required explicitly until official release):
  * Enumerable#lazy
  * Enumerator::Lazy

== Version 2.6.0 - May 29th, 2012

* Removed Enumerable#join

== Version 2.5.0 - March 25th, 2012

* Added some features of 1.9.3:
  * IO::NULL
  * IO#advise
  * String#byteslice
  * String#prepend

== Version 2.4.0 - March 24th, 2012

* Add backporting for libraries

* Bring libraries up to date:
  * Matrix
  * Prime
  * Set

* Added some features of 1.9.3:
  * IO.write, IO.binwrite

* Add forcing backports (must be required explicitly):
  * Hash#select (returns a Hash instead of an Array)
  * Enumerable / Array#map (returns an enumerator when called without a block)
  * String#length, size (for UTF-8 support)
