@@ -1,0 +1,3 @@
+require 'backports/tools'
+
+Backports.require_relative_dir
