@@ -1,0 +1,5 @@
+if Module.private_method_defined? :include
+  class Module
+    public :include
+  end
+end
